# CRL-OCSP-Validator

./: .gitignore  CMakeLists.txt  README.md  application  application.cpp  code_to_display_content_of_CRL_from_a_local_file.c  notes.txt
CRL_Validator/Hash_checking/: CRLFunctions.cpp  CRLFunctions.h  ChainFileFunctions.cpp  ChainFileFunctions.h  Common.cpp  Common.h  application.cpp  instructionsToRun.txt
Tests_for_CRL_Method/Invalid_Tests_for_CRL_Method/test1/: revoked-rsa-dv.ssl.com
Tests_for_CRL_Method/Valid_Tests_for_CRL_Method/test2/: testCertChain.pem
ValidTests/test1/: testCertChain.pem
include/: CRLFunctions.h  ChainFileFunctions.h  Common.h  OCSPFunctions.h
src/: CRLFunctions.cpp  ChainFileFunctions.cpp  Common.cpp  OCSPFunctions.cpp  application.cpp
test/: test_correctCertStackOrder.cpp  test_getCertStackFromPath.cpp
test/test_cert _files/revoked_certs/: revoked_certs_info.txt
test/test_cert _files/test1/: pem_encoded_crl.pem
test/test_cert _files/valid_certs/: valid_certs_info.txt
working_integrated_code/: .gitignore  CMakeLists.txt  CRLFunctions.cpp  CRLFunctions.h  ChainFileFunctions.cpp  ChainFileFunctions.h  Common.cpp  Common.h  OCSPFunctions.cpp  OCSPFunctions.h  application  application.cpp  new.cpp
working_integrated_code/docs/: instructionsToRun.txt
working_integrated_code/include/: Common.h
working_integrated_code/test/revoked_certs/ssl.com/: SSLcomRSASSLsubCA.crl  SSLcomRSASSLsubCA.crl.pem
working_integrated_code/test_files/: SSLcomRSASSLsubCA.crl
working_integrated_code/test_files/revoked_certs/badssl.com/: badssl.com.chain.pem  revoked.badssl.com.pem
working_integrated_code/test_files/revoked_certs/ssl.com/: Builtin Object Token_SSL.com Root Certification Authority RSA.pem  SSL.com RSA SSL subCA.pem  SSLcomRSASSLsubCA.crl.pem  revoked-rsa-dv.ssl.com.pem  ssl.com.chain.pem
working_integrated_code/test_files/revoked_certs/ssl.com/testusingthese/: der_encoding_crl.crl
(+25 files in other folders)
